<package format="3">
  <name>rqt_plot</name>
  <version>0.4.12</version>
  <description>rqt_plot provides a GUI plugin visualizing numeric values in a 2D plot using different plotting backends.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_plot</url>
  <url type="repository">https://github.com/ros-visualization/rqt_plot</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_plot/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-matplotlib</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend version_gte="0.2.25">qt_gui_py_common</exec_depend>
  <exec_depend>qwt_dependency</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
