<package format="2">
  <name>rqt_plot</name>
  <version>1.3.2</version>
  <description>rqt_plot provides a GUI plugin visualizing numeric values in a 2D plot using different plotting backends.</description>

  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_plot</url>
  <url type="repository">https://github.com/ros-visualization/rqt_plot</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_plot/issues</url>

  <author email="namniart@gmail.com">Austin Hendrix</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author>Dorian Scholz</author>
  <author email="mabel@openrobotics.org">Mabel Zhang</author>
  <author email="logans@cottsay.net">Scott K Logan</author>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-catkin-pkg-modules</exec_depend>
  <exec_depend version_gte="0.2.25">qt_gui_py_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
